Several nightly tests failing with assert(imin < imax) failed: Unexpected page size

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b04
    • Not verified

        The following nightly tests are failing with assert(imin < imax) failed: Unexpected page size

        runtime/6929067/Test6929067.sh
        sun/management/jmxremote/bootstrap/CustomLauncherTest.java
        nsk/coverage/jni/jni001
        nsk/coverage/jni/jni002
        nsk/coverage/jni/jni005
        nsk/coverage/jni/jni006
        nsk/coverage/jni/jni009
        nsk/coverage/jni/jni010
        nsk/coverage/jni/jni011
        nsk/regression/b4237806

        Detailed output:
        ============

        Test failure URL can be found on 2/6/14's nightly test page, link at:

        http://aurora.ru.oracle.com/functional/faces/ChessBoard.xhtml?reportName=J2SEFailures&parameters=%5BbatchNames%5D382173.JAVASE.NIGHTLY.VM.RT_Baseline.2014-02-06%2C+384459.JAVASE.NIGHTLY.VM.RT_Baseline.2014-02-06%5Bstatuses%5Dfailure.status+%3D+com.sun.aurora.data.entity.reporting.Status.FAILED+AND+failure.isValid+%3D+true+AND+%28%3Amatches%29%5Bmatches%5D%28NOT+failure.isKnown+%3D+true%29&splitting=%5BX+axis%5Dplatform%2CVMFlavor%5BComplement%5DproductConfiguration%2Cos%2Cbitness%2Cvmrelease%2Cvmbuild%2CVMVersionString%2Ctags%2Chostname%2Charness%2CosFlavor%2CosVersion%2CmsDate%2Cbaseline%2Cbatch%2Ccrs%2Cduration%2Crelease%2Cbuild%2Cdate%5BZ+axis%5DbaselineName%2Ccomponent%2Ctestsuite%2CbuildType%2CtruncatedProductConfiguration%5BY+axis%5Dfailure%2Creason%2CVMMode

        Example assertion output:
        ====================
          launcher : /export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/rt_baseline/JT_JDK/test/sun/management/jmxremote/bootstrap/linux-amd64/launcher
          libjvm : /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/rt_baseline/linux-amd64/jre/lib/amd64/server/libjvm.so
          classpath : /export/local/aurora/sandbox/results/workDir/classes/sun/management/jmxremote/bootstrap:/export/local/aurora/sandbox/results/workDir/classes/lib/testlibrary
        [Launcher] # To suppress the following error report, specify this argument
        [Launcher] # after -XX: or in .hotspotrc: SuppressErrorAt=/os_linux.cpp:3005
        [Launcher] #
        [Launcher] # A fatal error has been detected by the Java Runtime Environment:
        [Launcher] #
        [Launcher] # Internal Error (/opt/jprt/T/P1/193349.cphillim/s/src/os/linux/vm/os_linux.cpp:3005), pid=22483, tid=139848567670528
        [Launcher] # assert(imin < imax) failed: Unexpected page size
        [Launcher] #
        [Launcher] # JRE version: (8.0-b128) (build )
        [Launcher] # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b62-internal-201402061933.cphillim.rt-linux-solaris-c-fastdebug mixed mode linux-amd64 compressed oops)
        [Launcher] # Core dump written. Default location: /export/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/core or core.22483
        [Launcher] #
        [Launcher] # An error report file with more information is saved as:
        [Launcher] # /export/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/hs_err_pid22483.log
        [Launcher] #
        [Launcher] # If you would like to submit a bug report, please visit:
        [Launcher] # http://bugreport.sun.com/bugreport/crash.jsp
        [Launcher] #
        [Launcher] Current thread is 139848567670528
        [Launcher] Dumping core ...
        Thread[process reaper,10,system] stack: (length = 9)
        sun.misc.Unsafe.park(Native Method)
        java.util.concurrent.locks.LockSupport.parkNanos(LockSupport.java:215)
        java.util.concurrent.SynchronousQueue$TransferStack.awaitFulfill(SynchronousQueue.java:460)
        java.util.concurrent.SynchronousQueue$TransferStack.transfer(SynchronousQueue.java:362)
        java.util.concurrent.SynchronousQueue.poll(SynchronousQueue.java:941)
        java.util.concurrent.ThreadPoolExecutor.getTask(ThreadPoolExecutor.java:1066)
        java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1127)
        java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
        java.lang.Thread.run(Thread.java:744)

        Thread[Reference Handler,10,system] stack: (length = 3)
        java.lang.Object.wait(Native Method)
        java.lang.Object.wait(Object.java:502)
        java.lang.ref.Reference$ReferenceHandler.run(Reference.java:157)

        Thread[Signal Dispatcher,9,system] stack: (length = 0)

        Thread[MainThread,5,MainThreadGroup] stack: (length = 10)
        java.lang.Thread.dumpThreads(Native Method)
        java.lang.Thread.getAllStackTraces(Thread.java:1602)
        jdk.testlibrary.ProcessTools.startProcess(ProcessTools.java:136)
        CustomLauncherTest.main(CustomLauncherTest.java:149)
        sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        java.lang.reflect.Method.invoke(Method.java:483)
        com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
        java.lang.Thread.run(Thread.java:744)

        Thread[Finalizer,8,system] stack: (length = 4)
        java.lang.Object.wait(Native Method)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:142)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:158)
        java.lang.ref.Finalizer$FinalizerThread.run(Finalizer.java:209)

        Thread[main,5,main] stack: (length = 4)
        java.lang.Object.wait(Native Method)
        java.lang.Thread.join(Thread.java:1244)
        java.lang.Thread.join(Thread.java:1318)
        com.sun.javatest.regtest.MainWrapper.main(MainWrapper.java:71)

        ----------System.err:(20/1701)----------
        Failed to start a process (thread dump follows)
        java.nio.file.FileSystemException: /export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/rt_baseline/JT_JDK/test/sun/management/jmxremote/bootstrap/linux-amd64/launcher: Operation not permitted
        at sun.nio.fs.UnixException.translateToIOException(UnixException.java:91)
        at sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:102)
        at sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:107)
        at sun.nio.fs.UnixFileAttributeViews$Posix.setMode(UnixFileAttributeViews.java:238)
        at sun.nio.fs.UnixFileAttributeViews$Posix.setPermissions(UnixFileAttributeViews.java:260)
        at java.nio.file.Files.setPosixFilePermissions(Files.java:2042)
        at CustomLauncherTest.main(CustomLauncherTest.java:202)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:483)
        at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
        at java.lang.Thread.run(Thread.java:744)


        This failure has been tracked down to the following change:
        =============================================

        Changeset: 2c2a99f6cf83
        Author: coleenp
        Date: 2014-02-06 14:28 -0500
        URL: http://hg.openjdk.java.net/jdk9/hs-rt/hotspot/rev/2c2a99f6cf83

        8029775: Solaris code cleanup
        8033464: Linux code cleanup
        Summary: cleaned up warnings in solaris and linux specific os code.
        Reviewed-by: coleenp, fparain, dcubed
        Contributed-by: gerald.thornbrugh@oracle.com

        ! src/os/linux/vm/os_linux.cpp
        ! src/os/linux/vm/perfMemory_linux.cpp
        ! src/os/solaris/vm/os_solaris.cpp
        ! src/os/solaris/vm/perfMemory_solaris.cpp
        ! src/os_cpu/solaris_x86/vm/os_solaris_x86.cpp

        Changeset: 260ff1b76790
        Author: coleenp
        Date: 2014-02-06 20:32 +0000
        URL: http://hg.openjdk.java.net/jdk9/hs-rt/hotspot/rev/260ff1b76790

              Assignee:
              Gerald Thornbrugh (Inactive)
              Reporter:
              Lois Foltan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: