8033931: Several nightly tests failing with assert(imin < imax) failed: Unexpected page size

Loosen new assert() in get_stack_commited_bottom()

Reviewed-by: dcubed, coleenp, dsamersoff, hseigel